# This file is managed by transforms. Any changes made here will be lost when upgrading a repository.

[options]
# We set this to disable building our package as a zip, which does not work with
# Pipeline#discover_transforms in Python 2.*.
zip_safe = False

[pep8]
max-line-length = 120
# E711,E712 - Comparison using '==' is required for PySpark column expressions
ignore = E711,E712

[flake8]
max-line-length = 120

[pydocstyle]
ignore = D100,D103
